fix legend not showing

--- a/src/css/legendPanel.styl
+++ b/src/css/legendPanel.styl
@@ -66,7 +66,7 @@
   margin-top 2px
 
 .nested-legend-group
-  margin: 5px 0 10px 15px
+  margin: 0
   .nested-group-label
     margin-bottom 5px
     font-size 13px
